--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <!-- Menu icon -->
        <i class='bx bx-menu' id="menu-icon"></i>
        <!-- logo -->
-       <a href="#" class="logo">car<span>point</span></a>
+       <a href="#" class="logo">HOLLDAMS<span>AUTOS</span></a>
        <!-- nav list -->
         <ul class="navbar">
         <li><a href="#home" class="active">Home</a></li>
@@ -67,7 +67,7 @@
  <!-- Home -->
   <section class="home" id="home">
     <div class="home-text">
-        <h1>We Have Everthing <br>Your <span>car</span> Need</h1>
+        <h1>We Have Everthing <br>Your <span>Car</span> Need</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nisi maiores aliquid et voluptas ratione ducimus necessitatibus est provident atque! Excepturi consequatur esse corrupti tenetur molestias repellendus rerum sapiente similique!</p>
         <!-- Home Button -->
         <a href="#" class="btn">Discover Now</a>
