--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
        <!-- Menu icon -->
        <i class='bx bx-menu' id="menu-icon"></i>
        <!-- logo -->
-       <a href="#" class="logo">HOLLDAMS<span>AUTOS</span></a>
+       <a href="#" class="logo">HOLLYDAMS<span>AUTOS</span></a>
        <!-- nav list -->
         <ul class="navbar">
         <li><a href="#home" class="active">Home</a></li>
